--- a/content/themes/horace/locales/en.json
+++ b/content/themes/horace/locales/en.json
@@ -13,8 +13,8 @@
     "A collection of % post": "A collection of % post",
     "A collection of % posts": "A collection of % posts",
     "Featured": "Featured",
-    "Headline": "web3 technology in depth",
-    "Lead": "This is the first blog on web3 technology in depth. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.",
+    "Web3 Technology In Depth": "Web3 Technology In Depth",
+    "This is the first blog on web3 technology in depth. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.": "This is the first blog on web3 technology in depth. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.",
     "Continue Reading": "Continue Reading",
     "Latest Articles": "Latest Articles",
     "Share:": "Share:",
@@ -26,7 +26,7 @@
     "Weekly Newsletter": "Weekly Newsletter",
     "Get the latest and greatest from {blogtitle} delivered straight to your inbox every week.": "Get the latest and greatest from {blogtitle} delivered straight to your inbox every week.",
     "About {blogtitle}": "About {blogtitle}",
-    "Blog Description": "web3.guru covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network. Explore it yourself. Feedback, questions, or ideas? Drop us a line via email.",
+    "web3.guru covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network. Explore it yourself. Feedback, questions, or ideas? Drop us a line via email.": "web3.guru covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network. Explore it yourself. Feedback, questions, or ideas? Drop us a line via email.",
     "Recent Articles": "Recent Articles",
     "Tags": "Tags",
     "Open Sidebar": "Open Sidebar",
