--- a/content/themes/horace/locales/en.json
+++ b/content/themes/horace/locales/en.json
@@ -14,7 +14,7 @@
     "A collection of % posts": "A collection of % posts",
     "Featured": "Featured",
     "Web3 Technology In Depth": "Web3 Technology In Depth",
-    "This is the first blog on web3 technology in depth. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.": "This is the first blog on web3 technology in depth. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.",
+    "Everything you need to know about web3 technology. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.": "Everything you need to know about web3 technology. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.",
     "Continue Reading": "Continue Reading",
     "Latest Articles": "Latest Articles",
     "Share:": "Share:",
