--- a/content/themes/horace/locales/en.json
+++ b/content/themes/horace/locales/en.json
@@ -13,7 +13,7 @@
     "A collection of % post": "A collection of % post",
     "A collection of % posts": "A collection of % posts",
     "Featured": "Featured",
-    "web3 Technology In Depth": "web3 Technology In Depth",
+    "Web3 Technology In Depth": "Web3 Technology In Depth",
     "Everything you need to know about web3 technology. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.": "Everything you need to know about web3 technology. It covers EVM(Ethereum Virtual Machine), Solidity, Vyper and Loom Network.",
     "Continue Reading": "Continue Reading",
     "Latest Articles": "Latest Articles",
